--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Etiquette -- Anecdotes'
 - !lcc 'PS'
+- GITenberg
 title: The Cynic's Rules of Conduct
 url: http://www.gutenberg.org/ebooks/32227
